# server

./: .gitignore  pyproject.toml
backend/: settings.py  urls.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: ProjectDetails.js  ProjectItem.css  ProjectItem.js  ProjectList.js  ProjectWorkers.js
frontend/src/pages/: Employers.js  Notifications.js  Page.css  Projects.js  Settings.js  Sos.js  Svodka.js  Workers.js
templates/admin/: base_site.html
worker/: admin.py  apps.py  forms.py  models.py  permissions.py  serializers.py  views.py
worker/migrations/: 0001_initial.py  0002_worker_user.py  0003_index.py  0004_sos.py
workplace/: admin.py  apps.py  forms.py  models.py  serializers.py  views.py
workplace/migrations/: 0001_initial.py  0002_auto_20201031_1725.py
